--- a/bash/backup-score.service
+++ b/bash/backup-score.service
@@ -4,6 +4,6 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/opt/scripts/backup-script.sh.j2
+ExecStart=/opt/scripts/backup-script.sh
 StandardOutput=append:/var/log/score-backup.log
 StandardError=append:/var/log/score-backup.log
