--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -87,7 +87,7 @@
         dest: /home/ubuntu/frontend/
         mode: '0755'
    
-    - name: Copy nginx config
+    - name: Copy nginx config (HTTP only, bootstrap)
       template:
         src: nginx.conf.j2
         dest: /home/ubuntu/nginx.conf
@@ -118,17 +118,26 @@
       register: cert_present
       changed_when: false
       failed_when: false
-
-    - name: Obtain initial Let’s Encrypt certificate (one-time, standalone)
-      shell: |
-        docker run --rm \
-          -p 80:80 \
-          -v letsencrypt:/etc/letsencrypt \
-          certbot/certbot certonly --standalone \
-          -d {{ domain_name }} \
-          --agree-tos -m {{ letsencrypt_email }} \
-          --non-interactive --keep-until-expiring
+  
+    - name: Obtain initial Let’s Encrypt cert (standalone, one-time)
+      command: >
+        docker run --rm
+        -p 80:80
+        -v letsencrypt:/etc/letsencrypt
+        certbot/certbot certonly --standalone
+        -d {{ domain_name }}
+        --agree-tos -m {{ letsencrypt_email }}
+        --non-interactive --keep-until-expiring
       when: cert_present.rc != 0
+
+    - name: Wait until certificate files exist in letsencrypt volume
+      shell: >
+        docker run --rm -v letsencrypt:/etc/letsencrypt busybox
+        sh -c 'test -f /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem'
+      register: have_cert
+      retries: 15
+      delay: 4
+      until: have_cert.rc == 0
 
     - name: Switch to SSL nginx config atomically
       copy:
@@ -137,11 +146,18 @@
         remote_src: true
         mode: '0644'
 
-
     - name: Start containers
       shell: docker-compose -f /home/ubuntu/docker-compose.yml up -d --build --remove-orphans
       args:
         chdir: /home/ubuntu/
+
+    - name: Wait for frontend container to be healthy/running
+      shell: |
+        docker inspect -f '{{"{{ .State.Running }}"}}' frontend
+      register: fe_up
+      retries: 10
+      delay: 3
+      until: fe_up.stdout == "true"
 
     - name: Test Nginx config inside container
       shell: docker-compose -f /home/ubuntu/docker-compose.yml exec -T frontend nginx -t
@@ -210,4 +226,3 @@
         name: backup-score.timer
         enabled: yes
         state: started
-
